# protbench

./: .gitignore  README.md  environment.yml  main.py  main_v2.py  pyproject.toml  run.py  setup.cfg  tests.py
data/fluorescence/: preprocessor.ipynb
data/solubility/: preprocessor.ipynb
data/ssp/: preprocessor.ipynb  sequences.fasta
example_configs/: fluorescence_config.json  solubility_config.json  ssp_config.json
examples/: ankh_tutorial.ipynb  esm_tutorial.ipynb  how_to_use_embedder.ipynb
protbench/: __init__.py
protbench/applications/: __init__.py  benchmarking_task.py  contact_prediction.py  deeploc.py  default_models.py  fluorescence.py  gb1_sampled.py  pli.py  ppi.py  remote_homology.py  solubility.py  ssp3.py  ssp8.py  thermostability.py
protbench/applications/models/: __init__.py  ankh.py  default_models.py
protbench/applications/pretrained/: __init__.py  ankh.py  ankh3.py  esm2.py  pretrained.py  prottrans.py  utils.py
protbench/embedder/: __init__.py  embedder.py  embedding_function.py  torch_embedder.py  torch_embedding_function.py  utils.py
protbench/examples/: generate_config.py  legacy_main.py  train_with_convbert.py  train_with_convbert_esm2.py  train_with_lora.py  train_with_lora_esm2.py  utils.py
protbench/examples/config/: config.yaml
protbench/metrics/: __init__.py  metrics.py  test_metrics.py  utils.py
protbench/models/: __init__.py  convbert.py  downstream_model.py  downstream_models.py  heads.py  pooling.py  utils.py
protbench/src/: __init__.py  utils.py
protbench/src/embedder/: __init__.py  embedder.py  embedding_function.py  tests.py  torch_embedding_function.py
protbench/src/metrics/: __init__.py  metrics.py  metrics_registry.py  test_metrics.py  utils.py
protbench/src/models/: __init__.py  convbert.py  heads.py  (+3 more)
protbench/tasks/: __init__.py  task.py  test_tasks.py  utils.py
protbench/train_utils/: __init__.py  embeddings_dataset.py  test_train_utils.py  train_utils.py
protbench/utils/: __init__.py  collate_functions.py  collate_functions_v2.py  dataset_adapters.py  preprocessing_utils.py  utils.py
(+35 files in other folders)
