[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[options]
packages = "find:"
zip_safe = "True"

[project]
name = "ragene"
authors = [
    {name="Mohamed Shaffei", email="shaffei@proteinea.com"},
    {name="Hazem Essam", email="hazem@proteinea.com"}
]
maintainers = [
    {name="Mohamed Shaffei", email="shaffei@proteinea.com"},
    {name="Hazem Essam", email="hazem@proteinea.com"}
]
version = "1.0.0"

requires-python = ">=3.7"

description = "RaGene is a codon optimization deep learning library written in PyTorch."
long_description = "file: README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "accelerate",
    "biopython",
    "datasets",
    "einops",
    "hydra-core",
    "sentencepiece",
    "scikit-learn",
    "transformers",
    "wandb",
    "peft",
]

[tool.black]
line-length = 79 
target-version = ['py37']
force-exclude = "__init__.py"