[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[options]
packages = "find:"
zip_safe = "True"

[project]
name = "protbench"
authors = [
    {name="Mohamed Shaffei", email="shaffei@proteinea.com"},
    {name="Hazem Essam", email="hazem@proteinea.com"}
]
maintainers = [
    {name="Mohamed Shaffei", email="shaffei@proteinea.com"},
    {name="Hazem Essam", email="hazem@proteinea.com"}
]
version = "1.0.0"

requires-python = ">=3.7"

description = "Protbench is a framework that is used to benchmark Protein Language Models on different tasks."
long_description = "file: README.md"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "accelerate",
    "biopython",
    "datasets",
    "einops",
    "hydra-core",
    "sentencepiece",
    "scikit-learn",
    "transformers",
    "wandb",
    "peft",
]

[tool.black]
line-length = 79 
target-version = ['py37']
force-exclude = "__init__.py"